[tox]
envlist = py3

[tool:pytest]
testpaths = tests
python_files = test_*.py

[flake8]
max-line-length = 120

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "data-tools-suite"
version = "1.0.0"
description = "OpenClaw Data Processing Tools Suite"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "OpenClaw", email = "openclaw@example.com"}
]
requires-python = ">=3.8"
dependencies = [
    "pandas>=1.3.0",
    "openpyxl>=3.0.0",
    "chardet>=4.0.0",
    "matplotlib>=3.4.0",
]

[project.optional-dependencies]
all = [
    "pyarrow>=5.0.0",
    "xlrd>=2.0.0",
    "plotly>=5.0.0",
    "pymysql>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/openclaw/data-tools-suite"
Repository = "https://github.com/openclaw/data-tools-suite"
Issues = "https://github.com/openclaw/data-tools-suite/issues"